# bumblebee

./: Cargo.toml  package.json
src/: App.tsx  CompareScreen.tsx  ComparisonTable.tsx  CopyModal.tsx  DirectorySelect.tsx  DiskSpaceScreen.tsx  main.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: debounce.rs  disk_space.rs  fs_entry.rs  main.rs
src-tauri/test/00_all_cases/dirB/: differing_content.txt
src-tauri/test/01_test_files_match/dirB/subdir1/: file2.txt
src-tauri/test/01_test_files_match/dirB/subdir2/: file2.txt
src-tauri/test/04_dirA_lacks_sub_directory/dirA/subdir1/: file1.txt
src-tauri/test/05_dirA_lacks_file_in_sub_directory/dirA/subdir2/: file1.txt
test/06_different_text_content/dirB/: file1.txt
